# corona

./: .gitignore  .gitmodules  CLA.md  CMakeGenLua.cmake  CMakeLists.txt  CMakeRsyncLinuxLists.txt  CMakeSettings.json  CMakeSolar2D.cmake  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_HEADER.md  LICENSE.GPL  LICENSE.md  README.md  feature_addition  replace_code_sign.sh
platform/android/ndk/: AndroidBaseImageDecoder.cpp  AndroidBaseImageDecoder.h  AndroidBaseNativeImageDecoder.cpp  AndroidBaseNativeImageDecoder.h  AndroidBinaryReadResult.cpp  AndroidBinaryReadResult.h  AndroidBinaryReader.cpp  AndroidBinaryReader.h  AndroidDisplayObjectRegistry.cpp  AndroidDisplayObjectRegistry.h  AndroidFileReader.cpp  AndroidFileReader.h  AndroidFontSettings.cpp  AndroidFontSettings.h  AndroidGLView.cpp  AndroidGLView.h  AndroidImageData.cpp  AndroidImageData.h  AndroidImageDecoder.cpp  AndroidImageDecoder.h  AndroidJavaImageDecoder.cpp  AndroidJavaImageDecoder.h  AndroidKeyServices.cpp  AndroidKeyServices.h  AndroidNativePngDecoder.cpp  AndroidNativePngDecoder.h  AndroidOperationResult.cpp  AndroidOperationResult.h  AndroidZipFileEntry.cpp  AndroidZipFileEntry.h  CMakeLists.txt  PngReader.cpp  PngReader.h  Rtt_AndroidAudioPlayer.cpp  Rtt_AndroidAudioPlayer.h  Rtt_AndroidAudioRecorder.cpp  Rtt_AndroidAudioRecorder.h  Rtt_AndroidBitmap.cpp  Rtt_AndroidBitmap.h  Rtt_AndroidConnection.cpp  (+62 more)
platform/android/ndk/jni/: Android.mk  Application.mk  JavaToNativeBridge.cpp  JavaToNativeBridge.h  JavaToNativeShim.cpp  NativeToJavaBridge.cpp  NativeToJavaBridge.h  com_ansca_corona_JavaToNativeShim.h  importgl.c
platform/android/sdk/: AndroidManifest-Cards.xml  AndroidManifest-New.xml  AndroidManifest.xml  CMakeGenLua.cmake  CMakeLists.txt  SplashScreenBeacon.java.template  almixer.filters  almixer.vcxproj  android.sln  app.vcxproj  app.vcxproj.filters  build.gradle  build.gradle.kts  build.xml  corona.vcxproj  corona.vcxproj.filters  lua.vcxproj  lua.vcxproj.filters  mpg123.vcxproj  project.properties
platform/android/sdk/almixer/: almixer.vcxproj  almixer.vcxproj.filters
platform/android/sdk/amazon_game_circle_res/drawable/: gc_overlay_spinner.xml  rounded_corners.xml
platform/android/sdk/amazon_game_circle_res/layout/: modal_alert_container.xml  modal_overlay_container.xml
platform/android/sdk/amazon_game_circle_res/values/: amazon_gc_styles.xml
platform/android/sdk/corona/: corona.vcxproj  corona.vcxproj.filters
platform/android/sdk/res-new/raw/: corona_map_view2.html
platform/android/sdk/res-new/xml/: file_paths.xml  network_security_config.xml
platform/android/sdk/res/raw/: corona_map_view2.html
platform/android/sdk/res/xml/: network_security_config.xml
platform/android/sdk/src/com/ansca/corona/: ActivityIndicatorDialog.java  ApplicationContextProvider.java  AudioRecorder.java  CameraActivity.java  CameraServices.java  CameraView.java  Controller.java  CoronaActivity.java  CoronaActivityInfo.java  CoronaApiHandler.java  CoronaApiListener.java  CoronaBeacon.java  CoronaData.java  CoronaEditText.java  CoronaEnvironment.java  CoronaLua.java  CoronaLuaErrorHandler.java  CoronaLuaEvent.java  CoronaRuntime.java  CoronaRuntimeListener.java  CoronaRuntimeProvider.java  CoronaRuntimeTask.java  CoronaRuntimeTaskDispatcher.java  CoronaRuntimeWillLoadMainListener.java  CoronaSensorManager.java  CoronaService.java  CoronaShowApiHandler.java  CoronaSplashScreenApiHandler.java  CoronaStatusBarApiHandler.java  CoronaStatusBarSettings.java  CoronaStoreApiHandler.java  CoronaSystemApiHandler.java  CoronaVideoView.java  CoronaView.java  CoronaWebView.java  Crypto.java  FileContentProvider.java  JavaToNativeShim.java  MailSettings.java  MediaManager.java  (+12 more)
platform/android/sdk/src/com/ansca/corona/camera/: FileProvider.java
platform/android/sdk/src/com/ansca/corona/events/: AccelerometerTask.java  AlertTask.java  DidFailLoadUrlTask.java  Event.java  EventManager.java  FinishedLoadUrlTask.java  GyroscopeTask.java  ImagePickerTask.java  LocationTask.java  MediaEvent.java  MediaPickerTask.java  NotificationReceivedTask.java  NotificationRegistrationTask.java  OrientationTask.java  ResizeTask.java  RunnableEvent.java  ShouldLoadUrlTask.java  SoundEndedTask.java  TextEditingTask.java  TextTask.java  VideoEndedTask.java  VideoPickerTask.java  WebHistoryUpdatedTask.java  WebJSInterfaceCommonTask.java
platform/android/sdk/src/com/ansca/corona/graphics/: FontServices.java  FontSettings.java  HorizontalAlignment.java  TextRenderer.java  TypefaceInfo.java  TypefaceSettings.java
platform/android/sdk/src/com/ansca/corona/input/: AxisDataEventInfo.java  AxisDataPoint.java  AxisInfo.java  AxisInfoCollection.java  AxisSettings.java  AxisType.java  ConnectionState.java  CoronaKeyEvent.java  InputDeviceContext.java  InputDeviceInfo.java  InputDeviceInterface.java  InputDeviceInterfaceCollection.java  InputDeviceMonitor.java  InputDeviceServices.java  InputDeviceSettings.java  InputDeviceStatusEventInfo.java  InputDeviceType.java  InputDeviceTypeSet.java  InputHandler.java  KeyCode.java  KeyPhase.java  RaiseAxisEventTask.java  RaiseInputDeviceStatusChangedEventTask.java  RaiseKeyEventTask.java  RaiseMouseEventTask.java  RaiseMultitouchEventTask.java  RaiseTapEventTask.java  RaiseTouchEventTask.java  ReadOnlyAxisInfoCollection.java  ReadOnlyInputDeviceTypeSet.java  TapTracker.java  TapTrackerCollection.java  TouchPhase.java  TouchPoint.java  TouchTracker.java  TouchTrackerCollection.java  VibrationSettings.java  ViewInputHandler.java
platform/android/sdk/src/com/ansca/corona/listeners/: CoronaShowApiListener.java  CoronaSplashScreenApiListener.java  CoronaStatusBarApiListener.java  CoronaStoreApiListener.java  CoronaSystemApiListener.java
platform/android/sdk/src/com/ansca/corona/map/: MapMarker.java  (+8 more)
plugins/ads/: Android.mk  CMakeLists.txt
plugins/ads/shared/: CoronaAdsLibrary.cpp  CoronaAdsLibrary.h  CoronaProvider.ads.lua  ads.lua
plugins/analytics/: Android.mk  CMakeLists.txt
plugins/analytics/shared/: CoronaAnalyticsLibrary.cpp  CoronaAnalyticsLibrary.h  CoronaProvider.analytics.lua  analytics.lua
(+2915 files in other folders)
